# mim-swap-sol

./: .dockerignore  .gitignore  Anchor.toml  COST.md  README.md  TESTING.md  client_config.ini  deployed-devnet.md  docker-compose.yml  package-lock.json  package.json
.docker/nginx/: default.conf
apps/dex/: astro.config.mjs  package-lock.json  package.json  tsconfig.test.json
apps/dex/src/components/: DexShell.vue
apps/dex/src/idl/: raydium_cp_swap.json  raydium_cp_swap.ts
apps/dex/src/lib/: amounts.ts  config.ts  cp-swap-client.test.ts  cp-swap-client.ts  cp-swap-math.test.ts  pdas.test.ts  pdas.ts  positions.ts  wallets.ts
apps/dex/src/pages/: index.astro
apps/dex/src/styles/: global.css
apps/treasury/: astro.config.mjs  package-lock.json  package.json  tsconfig.test.json
apps/treasury/src/components/: TreasuryShell.vue
apps/treasury/src/idl/: mana_treasury.json  raydium_cp_swap.ts
apps/treasury/src/lib/: amounts.ts  (+8 more)
apps/web/: Dockerfile  astro.config.mjs  package-lock.json  package.json  tsconfig.json
client/src/instructions/: events_instructions_parse.rs
programs/cp-swap/src/: error.rs  lib.rs
programs/mana-treasury/: Cargo.toml
programs/mana-treasury/src/: lib.rs
scripts/: cp-swap-fee-keeper.js  lp-metadata.js  setup-devnet-cp-swap.js  setup-devnet-lp-metadata.js  setup-devnet-treasury.js  setup-owned-keys.sh  smoke-devnet-cp-swap.js  test-fee-sweep-local.sh  test-lp-metadata-local.sh  test-mana-local.sh
tests/: fee_sweep.integration.ts  initialize.test.ts  lp_metadata.test.ts  mana_treasury.test.ts
tests/utils/: instruction.ts
(+57 files in other folders)
