[package]
name = "mana-treasury"
version = "0.1.0"
description = "MIM-backed Mana treasury share vault"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "mana_treasury"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
local-testing = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["metadata"] }
